--- a/package.json
+++ b/package.json
@@ -8,16 +8,32 @@
     "start": "node index"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "compression": "^1.7.4",
     "connect-history-api-fallback": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-rate-limit": "^6.6.0",
     "express-ruid": "^1.1.4",
     "express-session": "^1.17.3",
-    "md5": "^2.3.0",
+    "express-slow-down": "^1.5.0",
+    "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "nodemailer": "^6.8.0",
+    "peer": "^0.6.1",
     "pg": "^8.8.0",
-    "python-shell": "^3.0.1"
+    "python-shell": "^3.0.1",
+    "sharp": "^0.31.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
+    "uuid": "^9.0.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
