--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon index",
+    "dev": "nodemon index",
     "start": "cross-env NODE_ENV=production node index"
   },
   "dependencies": {
