--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-https-redirect": "^1.0.0",
     "express-rate-limit": "^6.6.0",
     "express-ruid": "^1.1.4",
     "express-session": "^1.17.3",
