--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DB_DATABASE=postgres
 DB_USER=postgres
 DB_PASS=root
 DB_PORT=5432
+JWT_ACCESS_SECRET=access_secret
+JWT_REFRESH_SECRET=refresh_secret
