--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.3",
     "express-slow-down": "^1.5.0",
     "express-validator": "^6.14.2",
+    "geoip-lite": "^1.4.6",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
