--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "AwesomeServer",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "nodemon index",
-    "start": "cross-env NODE_ENV=production node index"
+    "serverdev": "nodemon server/index.js",
+    "serverbuild": "node server/index.js",
+    "clientdev": "vue-cli-service serve",
+    "clientbuild": "vue-cli-service build",
+    "dev": "npm-run-all --parallel serverdev clientdev",
+    "build": "npm-run-all --parallel serverbuild clientbuild"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "chart.js": "^4.0.1",
+    "child_process": "^1.0.2",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
@@ -30,20 +36,34 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
     "peer": "^0.6.1",
     "pg": "^8.8.0",
     "python-shell": "^3.0.1",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0",
     "sharp": "^0.31.1",
     "spdy": "^4.0.2",
-    "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0",
+    "swagger-jsdoc": "5.0.1",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "vue": "^3.2.13",
+    "vue-chartjs": "^5.0.1",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
