new global version, but need some fixes about front

--- a/config.json.example
+++ b/config.json.example
@@ -4,8 +4,7 @@
   "email_pass": "",
   "email_port": 465,
   "email_smtp": "",
-  "PORT": 80,
-  "DOMAIN": "http://127.0.0.1:80",
+  "DOMAIN": "127.0.0.1",
   "DB_HOST": "localhost",
   "DB_DATABASE": "postgres",
   "DB_USER": "postgres",
