--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "vue": "^3.2.13",
     "vue-chartjs": "^5.0.1",
     "vue-router": "^4.0.3",
+    "vue-smooth-dnd": "^0.8.1",
+    "vue-smooth-dnd-touch": "^0.8.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "http2": "^3.3.7",
-    "md5": "^2.3.0",
-    "http2-express-bridge": "^1.0.7",
     "@vitejs/plugin-vue": "^4.0.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
@@ -39,7 +38,10 @@
     "express-validator": "^6.14.2",
     "geoip-lite": "^1.4.6",
     "helmet": "^6.0.0",
+    "http2": "^3.3.7",
+    "http2-express-bridge": "^1.0.7",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
